--- a/healthcare_ms/templates/landing.html
+++ b/healthcare_ms/templates/landing.html
@@ -87,7 +87,7 @@
                    class="btn-hover bg-white text-blue-900 font-semibold py-3 px-8 rounded-lg shadow-lg hover:bg-gray-100">
                     <i class="fas fa-book mr-2"></i>API Documentation
                 </a>
-                <a href="/dashboard/"
+                <a href="/views/dashboard/"
                    class="btn-hover bg-blue-600 text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:bg-blue-700">
                     <i class="fas fa-tachometer-alt mr-2"></i>Dashboard
                 </a>
