--- a/healthcare_ms/templates/appointment/appointment_slot_form.html
+++ b/healthcare_ms/templates/appointment/appointment_slot_form.html
@@ -31,7 +31,7 @@
                                 class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
                             <option value="">Select a doctor</option>
                             {% for doctor in form.fields.doctor.queryset %}
-                            <option value="{{ doctor.pk }}" {% if form.doctor.value == doctor.pk %}selected{% endif %}>
+                            <option value="{{ doctor.guid }}" {% if form.doctor.value == doctor.guid %}selected{% endif %}>
                                 {{ doctor.get_full_name }}
                             </option>
                             {% endfor %}
