--- a/healthcare_ms/templates/appointment/appointment_slot_list.html
+++ b/healthcare_ms/templates/appointment/appointment_slot_list.html
@@ -77,10 +77,10 @@
                         </span>
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                        <a href="{% url 'appointment:appointment-slot-detail' slot.pk %}" class="text-blue-600 hover:text-blue-900 mr-3">
+                        <a href="{% url 'appointment:appointment-slot-detail' slot.guid %}" class="text-blue-600 hover:text-blue-900 mr-3">
                             <i class="fas fa-eye"></i>
                         </a>
-                        <a href="{% url 'appointment:appointment-slot-update' slot.pk %}" class="text-yellow-600 hover:text-yellow-900">
+                        <a href="{% url 'appointment:appointment-slot-update' slot.guid %}" class="text-yellow-600 hover:text-yellow-900">
                             <i class="fas fa-edit"></i>
                         </a>
                     </td>
