--- a/healthcare_ms/templates/patient/emergency_contact_detail.html
+++ b/healthcare_ms/templates/patient/emergency_contact_detail.html
@@ -93,7 +93,7 @@
                                 <span class="font-medium">{{ document.name }}</span>
                             </div>
                             <div class="mt-2 text-sm text-gray-500">
-                                Uploaded: {{ document.created_at|date:"M d, Y" }}
+                                Uploaded: {{ document.created|date:"M d, Y" }}
                             </div>
                         </div>
                     {% endfor %}
