Update date of birth display in patient profile and user detail templates for improved clarity and handling of missing data.

--- a/healthcare_ms/templates/patient/profile_list.html
+++ b/healthcare_ms/templates/patient/profile_list.html
@@ -46,7 +46,7 @@
                 </div>
                 <div>
                     <p class="text-sm text-gray-500">Date of Birth</p>
-                    <p class="font-medium">{{ profile.date_of_birth|date:"M d, Y" }}</p>
+                    <p class="font-medium">{{ profile.user.date_of_birth|date:"M d, Y" }}</p>
                 </div>
             </div>
 
