--- a/healthcare_ms/templates/ehr/medical_record_detail.html
+++ b/healthcare_ms/templates/ehr/medical_record_detail.html
@@ -113,7 +113,7 @@
                             {% for treatment in record.treatments.all %}
                             <li class="text-sm text-gray-600">
                                 <span class="font-medium">{{ treatment.name }}</span> -
-                                {{ treatment.status }}
+                                {{ treatment.treatment_status }}
                             </li>
                             {% endfor %}
                         </ul>
